--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -10,11 +10,6 @@
     <button type="bnt" id="generate-invitation-code-btn">Generate Code</button>
 </div>
 
-<div class="notification" id="delete-code-notification">
-    <span id="delete-code-message"></span>
-    <button id="delete-code-message-close">&times;</button>
-</div>
-
 <div class="dashboard-content">
     <ul class="dashboard-post-ul">
         <% if (codeCnt == 0) { %>
@@ -23,15 +18,16 @@
         <% codes.forEach(codeEntry => { %>
 
             <li>
-                <a href="">
+                <div class="dashboard-post-info">
                     <span><%= codeEntry.code %></span>
                     <span class="article-date"><%= codeEntry.validFrom.toDateString() %></span>
                     <span class="article-date"><%= codeEntry.validUntil.toDateString() %></span>
-                </a>
+                </div>
 
                 <div class="dashboard-post-controls">
+                    <button class="btn btn-copy">
                     <form class="" action="delete-code/<%= codeEntry._id %>?_method=DELETE" method="post">
-                        <input type="submit" value="Delete" class="btn btn-delete">
+                        <button type="submit" value="Delete" class="btn btn-delete">
                     </form>
                 </div>
             </li>
@@ -55,4 +51,9 @@
             <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
         </form>
     </div>
+</div>
+
+<div class="notification" id="delete-code-notification">
+    <span id="delete-code-message"></span>
+    <button id="delete-code-message-close">&times;</button>
 </div>
