--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -72,9 +72,11 @@
 
 .dashboard-post-ul li {
     display: flex;
-    margin-bottom: 10px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 20px;
 }
 
 .dashboard-post-ul li:last-child {
@@ -82,35 +84,88 @@
     border-bottom: none;
 }
 
-.dashboard-post-ul li a {
+.dashboard-post-info {
+    flex: 1;
+}
+
+.dashboard-post-info a {
     text-decoration: none;
     color: #333;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+}
+
+.dashboard-post-info span {
+    margin-right: 10px;
+    flex: 1;
 }
 
 .dashboard-post-controls {
     display: flex;
+    align-items: center;
+}
+
+.dashboard-post-controls form {
+    margin-left: auto;
+    display: flex;
 }
 
 .dashboard-post-controls .btn {
-    padding: 5px 10px;
-    border: none;
-    border-radius: 3px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 25px;
+    padding: 4px 8px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #fff;
     cursor: pointer;
-    color: #fff;
 }
 
-.dashboard-post-controls .btn-edit {
-    background-color: #28a745;
+.dashboard-post-controls .btn:hover {
+    background-color: #ccc;
 }
 
-.dashboard-post-controls .btn-delete {
-    background-color: #dc3545;
+.dashboard-post-controls .btn-edit::before {
+    content: '';
+    background-image: url('/img/edit_64px.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
 }
 
-.dashboard-post-controls .btn-restore {
-    background-color: #ffc107;
+.dashboard-post-controls .btn-delete::before {
+    content: '';
+    background-image: url('/img/trash_can_64px.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.dashboard-post-controls .btn-restore::before {
+    content: '';
+    background-image: url('/img/restore_64px.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.dashboard-post-controls .btn-copy::before {
+    content: '';
+    background-image: url('/img/copy_64px.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
 }
 
 .overlay {
