--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="/css/login.css">
+    <script type="text/javascript" defer src="/js/login-page-script.js"></script>
 </head>
 
 <div class="login-page-container">
