Add feature: display message when login is invalid, instead of  redirecting to an error page.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -21,7 +21,7 @@
                     <div class="password-input-div">
                         <input type="password" name="password" placeholder="Enter password" id="password-input">
                         <div id="show-password-icon" class="show-password-icon"></div>
-                        <p class="error-message" id="password-error">Please enter a password.</p>
+                        <p class="error-message" id="password-error"></p>
                     </div>
                 </div>
                 <button type="submit" id="login-button">Login</button>
