--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,6 +3,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parsley.js/2.9.2/parsley.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.1/purify.min.js"></script>
     <script type="text/javascript" defer src="/js/login-page-script.js"></script>
 </head>
 
