Code refactoring: add middleware for all get methods that adds currRoute to locals; dashboard also use regular header; remove admin header

--- a/views/layouts/admin-layout.ejs
+++ b/views/layouts/admin-layout.ejs
@@ -12,7 +12,7 @@
     <body>
         <%- include('../partials/search-bar.ejs') %>
         <div class="main-layout-container">
-            <%- include('../partials/admin_header.ejs') %>
+            <%- include('../partials/header.ejs') %>
             <main class="main">
                 <%- body %>
             </main>
