--- a/views/admin/dashboard-sections/deleted-posts.ejs
+++ b/views/admin/dashboard-sections/deleted-posts.ejs
@@ -23,6 +23,7 @@
                         <button type="submit" class="btn btn-edit">
                     </form>
                     <form action="restore-post/<%= post._id %>?_method=PUT" method="post">
+                        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
                         <button type="submit" class="btn btn-restore">
                     </form>
                 </div>
