--- a/views/admin/edit-post.ejs
+++ b/views/admin/edit-post.ejs
@@ -5,6 +5,8 @@
 </div>
 
 <form class="" action="/edit-post/<%= post._id %>?_method=PUT" method="post">
+    <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
+
     <label for="title"><b>TITLE</b></label>
     <input type="text" name="title" placeholder="Give it a title." value="<%= post.title %>">
 
