--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -50,3 +50,8 @@
         </div>
     </div>
 </div>
+
+<div class="notification" id="login-notification">
+    <span></span>
+    <button>&times;</button>
+</div>
