Web redesign: use page number selection for pagination and add minimum styles.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,4 +1,5 @@
 @import url('components/notification.css');
+@import url('components/pagination.css');
 
 /* Dashboard Header */
 .dashboard-header {
