--- a/views/admin/dashboard-sections/deleted-posts.ejs
+++ b/views/admin/dashboard-sections/deleted-posts.ejs
@@ -32,7 +32,7 @@
     </ul>
 
     <% if (hasNextDeletedPage) { %>
-        <a href="?page=<%= pageNum %>&deletedPage=<%= deletedPageNum + 1 %>" class="pagination">
+        <a href="?deletedPage=<%= deletedPageNum + 1 %>" class="pagination">
             &lt; View Older Deleted Posts
         </a>
     <% } %>
