--- a/public/css/login.css
+++ b/public/css/login.css
@@ -196,12 +196,13 @@ p {
     margin-bottom: 8px;
 }
 
-#invitation-code-inputs {
+.invitation-code-inputs {
     display: inline-flex;
 }
 
-#invitation-code-inputs input {
-    width: 30px;
+.invitation-code-inputs input {
+    width: 40px;
+    height: 40px;
     text-align: center;
     margin-right: 5px;
 }
