--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -35,9 +35,10 @@
             <hr>
             <p>Or</p>
             <form action="/verify-invitation-code" method="post">
+                <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
                 <button type="submit">Signup with Invitation Code</button>
                 <div class="login-form-group">
-                    <div id="invitation-code-inputs">
+                    <div class="invitation-code-inputs">
                         <input type="text" maxlength="1" size="1" name="invitation-code-1" placeholder="-">
                         <input type="text" maxlength="1" size="1" name="invitation-code-2" placeholder="-">
                         <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-">
