Web redesign: add styles for messages (success, notification, warning, and error); rename notification element to toast-notification; extract function for showing and hiding toast notification.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-<div class="notification" id="login-notification">
+<div class="toast-notification" id="login-toast-notification">
     <span></span>
     <button>&times;</button>
 </div>
