--- a/public/css/components/toast-notification.css
+++ b/public/css/components/toast-notification.css
@@ -1,4 +1,4 @@
-.notification {
+.toast-notification {
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -13,7 +13,7 @@
     z-index: 999;
 }
 
-.notification button {
+.toast-notification button {
     background-color: transparent;
     border: none;
     width: 15px;
