--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,6 +1,7 @@
 @import url('components/input-list.css');
-@import url('components/notification.css');
+@import url('components/toast-notification.css');
 @import url('components/pagination.css');
+@import url('components/message.css');
 
 /* Dashboard Header */
 .dashboard-header {
