--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
 @import url('components/input-list.css');
-@import url('components/notification.css');
+@import url('components/toast-notification.css');
 
 .login-page-container {
     display: flex;
