--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -49,13 +49,13 @@
                 <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-">
                 <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-">
             </div>
-            <p class="error-message" id="invitation-outputs-error"></p>
+            <div class="message"></div>
             <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
         </form>
     </div>
 </div>
 
-<div class="notification" id="delete-code-notification">
-    <span id="delete-code-message"></span>
-    <button id="delete-code-message-close">&times;</button>
+<div class="toast-notification" id="invitation-code-toast-notification">
+    <span></span>
+    <button>&times;</button>
 </div>
