--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -57,5 +57,5 @@
 
 <div class="toast-notification" id="invitation-code-toast-notification">
     <span></span>
-    <button>&times;</button>
+    <button>✖</button>
 </div>
