--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -54,5 +54,5 @@
 
 <div class="toast-notification" id="login-toast-notification">
     <span></span>
-    <button>&times;</button>
+    <button>✖</button>
 </div>
