--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -221,30 +221,73 @@
 
     .panel h2 {
         margin-top: 0;
+        color: #444;
     }
 
 .overlay-close {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 7px;
+    right: 7px;
     background: none;
     border: none;
     font-size: 20px;
     cursor: pointer;
+    color: #999;
 }
 
+    .overlay-close:hover {
+        color: #333;
+    }
+
 .refresh-icon {
-    font-size: 30px;
     cursor: pointer;
+    margin-left: 10px;
+    font-size: 20px;
     user-select: none;
 }
 
-button[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.form-group {
+    margin-bottom: 15px;
 }
+
+    .form-group label {
+        display: block;
+        margin-bottom: 5px;
+        color: #666;
+    }
+
+    .form-group input {
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+        .form-group input:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+            outline: none;
+        }
+
+.expand-input input {
+    width: 100%;
+}
+
+.center-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button[type="submit"] {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+    button[type="submit"]:hover {
+        background-color: #0056b3;
+    }
