--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -70,7 +70,9 @@
             </div>
             
             <div class="message"></div>
-            <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
+            <div class="form-group center-content">
+                <button type="submit" name="addCodeBtn" value="Add Code">Add Code</button>
+            </div>
         </form>
     </div>
 </div>
