--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -25,10 +25,10 @@
                 </div>
 
                 <div class="dashboard-post-controls">
-                    <button class="btn btn-copy">
+                    <button class="btn btn-copy" />
                     <form class="" action="delete-code/<%= codeEntry._id %>?_method=DELETE" method="post">
-                        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
-                        <button type="submit" value="Delete" class="btn btn-delete">
+                        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+                        <button type="submit" value="Delete" class="btn btn-delete" />
                     </form>
                 </div>
             </li>
@@ -42,31 +42,31 @@
         <button class="overlay-close">✖</button>
         <h2>Generate Invitation Code</h2>
         <form action="/add-invitation-code" method="post" autocomplete="off">
-            <input type="hidden" name="_csrf" value=""<%= locals.csrfToken %>">
+            <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
             <div class="form-group center-content">
                 <div class="invitation-code-inputs">
-                    <input type="text" maxlength="1" size="1" name="invitation-code-1" placeholder="-">
-                    <input type="text" maxlength="1" size="1" name="invitation-code-2" placeholder="-">
-                    <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-">
-                    <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-">
+                    <input type="text" maxlength="1" size="1" name="invitation-code-1" placeholder="-" />
+                    <input type="text" maxlength="1" size="1" name="invitation-code-2" placeholder="-" />
+                    <input type="text" maxlength="1" size="1" name="invitation-code-3" placeholder="-" />
+                    <input type="text" maxlength="1" size="1" name="invitation-code-4" placeholder="-" />
                 </div>
                 <span class="refresh-icon">🔃</span>
             </div>
             <div class="form-group expand-input">
                 <label for="validFrom">Start Date:</label>
-                <input type="date" id="validFrom" name="validFrom">
+                <input type="date" id="validFrom" name="validFrom" />
             </div>
             <div class="form-group expand-input">
                 <label for="validUntil">End Date:</label>
-                <input type="date" id="validUntil" name="validUntil">
+                <input type="date" id="validUntil" name="validUntil" />
             </div>
             <div class="form-group expand-input">
                 <label for="maxUsage">Maximum Usage:</label>
-                <input type="number" id="maxUsage" name="maxUsage" min="1" value="10">
+                <input type="number" id="maxUsage" name="maxUsage" min="1" value="10" />
             </div>
             <div class="form-group expand-input">
                 <label for="description">Memo:</label>
-                <input type="text" id="description" name="description" placeholder="Optional">
+                <input type="text" id="description" name="description" placeholder="Optional" />
             </div>
             
             <div class="message"></div>
