--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,4 @@
+@import url('components/form.css');
 @import url('components/input-list.css');
 @import url('components/message.css');
 @import url('components/overlay.css');
@@ -214,38 +215,6 @@
     margin-left: 10px;
     font-size: 20px;
     user-select: none;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-    .form-group label {
-        display: block;
-        margin-bottom: 5px;
-        color: #666;
-    }
-
-    .form-group input {
-        padding: 8px;
-        box-sizing: border-box;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-        .form-group input:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-            outline: none;
-        }
-
-.expand-input input {
-    width: 100%;
-}
-
-.center-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .form-group button[type="submit"] {
