Web redesign: add button styles to a seperate file; change button style for confirm and cancel buttons.

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -42,8 +42,8 @@
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
             <p class="error-message" id="logout-error"></p>
             <div class="form-group center-content">
-                <button id="cancel-logout">Cancel</button>
-                <button type="submit" id="confirm-logout">Logout</button>
+                <button type="button" class="btn cancel-btn" id="cancel-logout">Cancel</button>
+                <button type="submit" class="btn confirm-btn" id="confirm-logout">Logout</button>
             </div>
         </form>
     </div>
