--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,4 @@
+@import url('components/button.css');
 @import url('components/form.css');
 @import url('components/input-list.css');
 @import url('components/message.css');
@@ -216,18 +217,3 @@
     font-size: 20px;
     user-select: none;
 }
-
-.form-group button[type="submit"] {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    margin: 10px auto;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-    .form-group button[type="submit"]:hover {
-        background-color: #0056b3;
-    }
