--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -71,7 +71,7 @@
             
             <div class="message"></div>
             <div class="form-group center-content">
-                <button type="submit" value="Add Code">Add Code</button>
+                <button type="submit" class="btn confirm-btn">Add Code</button>
             </div>
         </form>
     </div>
