Web redesign: format logout error using message style; enable close logout overlay; select overlay elements with class and remove id.

--- a/public/css/components/overlay.css
+++ b/public/css/components/overlay.css
@@ -25,6 +25,8 @@
     .panel h2 {
         margin-top: 0;
         color: #444;
+        justify-content: center;
+        align-items: center;
     }
 
 .overlay-close {
