Add feature: client side: pass validFrom (converted to UTC), validUtil (converted to UTC), maxUsage, and description to server; server side: validate inputs, and save them to the server; display UTC time.

--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -20,8 +20,8 @@
             <li>
                 <div class="dashboard-post-info">
                     <span><%= codeEntry.code %></span>
-                    <span class="article-date"><%= codeEntry.validFrom.toDateString() %></span>
-                    <span class="article-date"><%= codeEntry.validUntil.toDateString() %></span>
+                    <span class="article-date"><%= codeEntry.validFrom.toISOString() %></span>
+                    <span class="article-date"><%= codeEntry.validUntil.toISOString() %></span>
                 </div>
 
                 <div class="dashboard-post-controls">
