Web redesign: for each invitation code's valid dates, display as UTC: yyyy-mm-dd.

--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -20,8 +20,8 @@
             <li>
                 <div class="dashboard-post-info">
                     <span><%= codeEntry.code %></span>
-                    <span class="article-date"><%= codeEntry.validFrom.toISOString() %></span>
-                    <span class="article-date"><%= codeEntry.validUntil.toISOString() %></span>
+                    <span class="article-date"><%= formatDateAsUTCString(codeEntry.validFrom) %></span>
+                    <span class="article-date"><%= formatDateAsUTCString(codeEntry.validUntil) %></span>
                 </div>
 
                 <div class="dashboard-post-controls">
