--- a/views/admin/dashboard-sections/invitation-codes.ejs
+++ b/views/admin/dashboard-sections/invitation-codes.ejs
@@ -54,15 +54,15 @@
             </div>
             <div class="form-group expand-input">
                 <label for="validFrom">Start Date:</label>
-                <input type="date" id="validFrom" name="validFrom" />
+                <input type="date" id="validFrom" name="validFrom" required />
             </div>
             <div class="form-group expand-input">
                 <label for="validUntil">End Date:</label>
-                <input type="date" id="validUntil" name="validUntil" />
+                <input type="date" id="validUntil" name="validUntil" required />
             </div>
             <div class="form-group expand-input">
                 <label for="maxUsage">Maximum Usage:</label>
-                <input type="number" id="maxUsage" name="maxUsage" min="1" value="10" />
+                <input type="number" id="maxUsage" name="maxUsage" min="1" max="50" value="10" />
             </div>
             <div class="form-group expand-input">
                 <label for="description">Memo:</label>
