Web redesign: verify-invitation-code form message style change.

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -46,7 +46,7 @@
                     </div>
                     <div class="tooltip-icon" data-tooltip="Default: 1234"></div>
                 </div>
-                <p class="error-message" id="invitation-inputs-error">Must be a 4-digit code.</p>
+                <div class="message"></div>
             </form>
         </div>
     </div>
