Fix bug: add csrfToken to signup form.

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,6 +8,7 @@
         <div class="login-form-container">
             <h2>Welcome!</h2>
             <form action="/signup" method="post">
+                <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
                 <div class="login-form-group">
                     <label for="username">Username</label>
                     <input type="text" name="username" placeholder="Enter username">
