--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -28,8 +28,8 @@
                         <input type="password" name="password" placeholder="Enter password" id="password-input" required>
                         <div id="show-password-icon" class="show-password-icon"></div>
                     </div>
-                    <p class="error-message" id="password-error"></p>
                 </div>
+                <p class="message"></p>
                 <button type="submit" id="login-button">Login</button>
             </form>
             <hr>
